messaging_app/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: messaging-app
  labels:
    name: messaging-app
