messaging_app/kubernetes/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: messaging-app-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: messaging-app
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector: {}
    - namespaceSelector: {}
    ports:
    - protocol: TCP
      port: 8000
  egress:
  - to:
    - namespaceSelector: {}
    ports:
    - protocol: TCP
      port: 80
    - protocol: TCP
      port: 443
    - protocol: TCP
      port: 3306
      namespaceSelector:
        matchLabels:
          name: mysql
    - protocol: TCP
      port: 6379
      namespaceSelector:
        matchLabels:
          name: redis
